--- a/index.html
+++ b/index.html
@@ -36,8 +36,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300&display=swap" rel="stylesheet">
+
     <link rel="shortcut icon" href="./images/aqua perfil.jpg" type="image/x-icon">
     <link rel="stylesheet" href="./css/main.css">
+
+   
 
     <script src="https://kit.fontawesome.com/fb1c874a89.js" crossorigin="anonymous"></script>
     <script defer src="./js/menu.js"></script>
@@ -70,9 +74,9 @@
             </div> 
             <nav class="nav-menu">
                 <a href="#" class="link-menu"><i class="fa-solid fa-house"></i>Home</a>
+                <a href="#section-2" class="link-menu"><i class="fa-solid fa-address-book"></i>About me</a>
                 <a href="#" class="link-menu"><i class="fa-solid fa-images"></i>Gallery</a>
                 <a href="#" class="link-menu"><i class="fa-solid fa-dollar-sign"></i>Commission</a>
-                <a href="#section-2" class="link-menu"><i class="fa-solid fa-address-book"></i>About me</a>
                 <a href="#" class="link-menu"><i class="fa-solid fa-blog"></i>Blogs</a>
             </nav>
 
@@ -136,18 +140,20 @@
                         </p>
 
                         <p class="description-about">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui quas rem iure dolores blanditiis deleniti repellendus, architecto, quaerat deserunt vero nobis rerum similique iste laboriosam aspernatur dolore pariatur autem, ipsa quos repellat voluptas officia. Quas deleniti illo sunt, magni consequuntur nesciunt, aperiam accusantium asperiores iusto facere et amet iste distinctio.
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores modi velit impedit debitis animi iusto beatae distinctio labore. Omnis iure vel ullam nemo quisquam.
+                            I consider that I do not have a personal style as an artist, I am constantly changing as a result of my learning process. I've been through several stages
+                            where my style varied from manga to portraits, but the central axis of my illustrations has always been women. The biggest change in my style happened along with my entry into the world of NFTs just 3 months ago, where I have since decided to dedicate myself more seriously to illustration.
                         </p>
 
                         <div class="description-sigilo">
 
                             <p class="description-about">
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium, dolorem obcaecati quasi in repudiandae odit, consectetur iure sed laudantium, corporis sunt quisquam? Est, corrupti? Consequuntur et optio repudiandae aperiam voluptatum itaque, iste reprehenderit. Aliquid illo earum ratione perspiciatis quaerat! Rerum aperiam voluptatum ipsa incidunt et velit magni suscipit tempora cumque, doloremque odit a veniam tempore hic. Velit voluptatibus ipsam, natus iusto necessitatibus porro voluptatem nobis illo? Nulla minus fugit dignissimos dicta est id in rem quibusdam eos dolorum, ab veritatis.
+                                The biggest change in my style happened along with my entry into the world of NFTs just 3 months ago, where I have since decided to dedicate myself more seriously to illustration. I am currently exploring the combined use of both vector and raster techniques. My illustrations have several aspects that are usually common among them, among which are the use of geometric figures and vertical symmetry.
                             </p>
 
                             <p class="description-about">
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium consequatur explicabo minima saepe porro optio hic illum necessitatibus doloribus quod?
+                                The women in my illustrations generally have a mysterious and spiritual aspect, reflected by the presence of a hoop behind the head, flowing hair that indicates movement, and white eyes. 
+                                For some time now, the works of Ankymoore and Bao Pham have been my references in terms of the simplicity and beauty of the female figure. I'm currently getting inspired
+                                a lot in the works of Catalina Estrada, Chabeli Farro, Hola.Kanola and Lunaleonis (Twitter) to make the vector part of my illustrations.
                             </p>
 
                         </div>
@@ -165,6 +171,10 @@
                 </div>
 
                 <script src="./js/read.js"></script>
+
+                <section class="section-3">
+
+                </section>
 
                 
 
