--- a/index.html
+++ b/index.html
@@ -174,12 +174,16 @@
                     </span>
 
                     <div class="subtitle-container">
+                        <i class="fa-brands fa-ethereum eth"></i>
                         <span class="off-title-1">
                             <strong class="subtitle-color">"Cursed Creatures"</strong> Collection
                         </span>
                         <span class="off-title-2">
                             on <strong class="subtitle-color">Foundation</strong>
                         </span>
+                        <a href="#coleccion" class="link-go">
+                            <button class="go">GO!</button>
+                        </a>
                     </div>
                 </div>
 
@@ -344,10 +348,10 @@
 
 
 
-                <div class="gallery-container-2">
-
-                    <div class="bloque">
-                        <div class="bloque-up">
+                <div class="gallery-container-2" id="coleccion" >
+            
+                    <div class="bloque" >
+                        <div class="bloque-up" >
                             <div class="historia-container">
                                 <div class="nft-container">
                                     <img src="./images/nft-1.jpg" alt="" class="nft">
@@ -382,8 +386,8 @@
                             </div>
                         </div>
                         <div class="pie-container">
-                            <a href="#" class="link-markerplace">
-                                <button class="btn-link-marker">Buy Now</button>
+                            <a href="#nft-2" class="link-markerplace">
+                                <button class="btn-link-marker">Next</button>
                             </a>
                         </div>
                     </div>
@@ -396,7 +400,7 @@
 
 
 
-                    <div class="bloque">
+                    <div class="bloque" id="nft-2">
                         <div class="bloque-up">
                             <div class="historia-container">
                                 <div class="nft-container">
@@ -434,8 +438,8 @@
                             
                         </div>
                         <div class="pie-container">
-                            <a href="#" class="link-markerplace">
-                                <button class="btn-link-marker">Buy Now</button>
+                            <a href="#nft-3" class="link-markerplace">
+                                <button class="btn-link-marker">Next</button>
                             </a>
                         </div>
 
@@ -446,7 +450,7 @@
 
 
 
-                    <div class="bloque">
+                    <div class="bloque" id="nft-3">
                         <div class="bloque-up">
                             <div class="historia-container">
                                 <div class="nft-container">
