--- a/index.html
+++ b/index.html
@@ -505,6 +505,36 @@
 
             </section>
 
+            <footer>
+                <ul class="social-icon">
+                    <li class="icon">
+                        <a href="#" class="link-icon"><i class="fa-brands fa-twitter"></i></a>
+                    </li>
+                    <li class="icon">
+                        <a href="#" class="link-icon"><i class="fa-brands fa-instagram-square"></i></a>
+                    </li>
+                    <li class="icon">
+                        <a href="#" class="link-icon"><i class="fa-brands fa-behance"></i></a>
+                    </li>
+                    <li class="icon">
+                        <a href="#" class="link-icon"><i class="fa-brands fa-facebook"></i></a>
+                    </li>
+                </ul>
+
+                <ul class="footer-menu">
+                    <li><a href="#" class="footer-link">Legal warning</a></li>
+                    <li><a href="#" class="footer-link">Privacy Policy</a></li>
+                    <li><a href="#" class="footer-link">
+                        Terms & Conditions</a></li>
+                    <li><a href="#" class="footer-link">Cookies</a></li>
+                </ul>
+
+                <p class="final">&#169 2022 Created by RosbelDesing | All rights reserved</p>
+            </footer>
+
+
+        
+
 
 
 
