--- a/index.html
+++ b/index.html
@@ -506,6 +506,12 @@
             </section>
 
             <footer>
+                <div class="waves">
+                    <div class="wave" id="wave1"></div>
+                    <div class="wave" id="wave2"></div>
+                    <div class="wave" id="wave3"></div>
+                    <div class="wave" id="wave4"></div>
+                </div>
                 <ul class="social-icon">
                     <li class="icon">
                         <a href="#" class="link-icon"><i class="fa-brands fa-twitter"></i></a>
